# just-some-kernel

./: .gitignore  Cargo.toml  README.md  aarch64-unknown-none.json  aarch64-unknown-none.ld  run.sh  u-boot-config
.cargo/: config.toml
meta/: grub.cfg
meta/link/: x86_64-unknown-none.ld
meta/target-specs/: x86_64-unknown-none.json
src/: main.rs
